--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -30,6 +30,7 @@
 @using Sunduk.PWA.Infrastructure.Tools
 @using Sunduk.PWA.Infrastructure.Tools.Base
 @using Sunduk.PWA.Infrastructure.Tools.Turning
+@using Sunduk.PWA.Infrastructure.Tools.Turning.Base
 @using Sunduk.PWA.Infrastructure.Tools.Milling
 @using Sunduk.PWA.Infrastructure.CAM
 @using MudBlazor
