--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -78,6 +78,8 @@ https://github.com/dece1ver/Sunduk
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 8), new DateTime(2022, 2, 4), new string[] {
             "Добавил расчет сферы ниппеля.", "Добавил пересчет точки с декартовой СК в полярную и обратно.",
             "Перенес глубину центровки и векторы из всякой хрени в базу знаний."}));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 9), new DateTime(2022, 2, 12), new string[] {
+            "Расчет диаметра на который может опуститься расточной."}));
         Info.Reverse();
     }
 
